[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
markers = [
    "unit: pure unit tests with no Qt requirement",
    "qt: tests that need a running QApplication",
    "integration: integration tests (load + save cycle)",
    "e2e: end-to-end tests that exercise the full MainWindow",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "main.py",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP007",  # use X | Y for union — PyQt6 stubs don't use it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]   # allow assert + unannotated args in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "tests/",
    "main\\.py",
]
